--- a/render.yaml
+++ b/render.yaml
@@ -2,6 +2,5 @@ services:
   - type: web
     name: model-cache-api
     env: python
-    region: oregon  # ou sua região
     buildCommand: "pip install -r requirements.txt"
-    startCommand: "uvicorn server:app --host 0.0.0.0 --port $PORT"
+    startCommand: "uvicorn app:app --host 0.0.0.0 --port $PORT"
