--- a/render.yaml
+++ b/render.yaml
@@ -2,5 +2,6 @@ services:
   - type: web
     name: model-cache-api
     env: python
+    region: oregon
     buildCommand: "pip install -r requirements.txt"
     startCommand: "uvicorn app:app --host 0.0.0.0 --port $PORT"
